--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Boooo!</title>
+    <link rel="stylesheet" href="style.css"> 
+  </head>
+  <body>
+    <p>hey</p>
+  </body>
 
+
+</html>
